--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,9 @@
 @import "normalize.less";
 
+@import "fonts.less";
 @import "common.less";
 @import "variables.less";
 @import "mixins.less";
+@import "calculator.less";
 
 
